--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -5,6 +5,11 @@
 
 // ≥1200px
 +media-breakpoint-down(lg)
+  .fix-div
+    right: 15px
+    bottom: 15px
+    top: auto
+
   .intro
     margin-top: 200px
     font-size: 36px
@@ -31,6 +36,12 @@
 // ≥768px
 +media-breakpoint-down(sm)
 
+  .fix-item
+    padding: 7px
+    img
+      width: 20px
+      height: 20px
+      margin-bottom: 0
   .main-head
     height: auto
 
