--- a/app/sass/layout/_header.sass
+++ b/app/sass/layout/_header.sass
@@ -11,6 +11,9 @@ header
     float: right
     position: relative
     top: -3px
+  .btn
+    &:hover
+      color: #fff
 
 .logo
   display: inline-block
@@ -67,7 +70,6 @@ header
 
 .main-head
   position: relative
-  background-color: green
   height: 680px
   padding-bottom: 25px
 .header-bg
