--- a/app/sass/base/_libs.sass
+++ b/app/sass/base/_libs.sass
@@ -3,3 +3,4 @@
 @import "../libs/bootstrap/scss/utilities/sizing"
 @import "../libs/pixel-glass/pixel-glass.css"
 @import "../libs/mmenu/jquery.mmenu.all.css"
+@import "../libs/owl-carousel/owl.carousel.min.css"
