--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -26,6 +26,13 @@
 
 // ≥992px
 +media-breakpoint-down(md)
+
+  .section-head
+    font-size: 36px
+
+  .tizer
+    font-size: 30px
+
   .intro
     text-align: left
     margin-top: 115px
@@ -35,6 +42,9 @@
 
 // ≥768px
 +media-breakpoint-down(sm)
+
+  .section-head
+    font-size: 32px
 
   .fix-item
     padding: 7px
@@ -70,6 +80,24 @@
 
 // ≥480px
 +media-breakpoint-down(xs)
+
+  .section-head
+    font-size: 28px
+
+  .toppr-slider-wrap
+    .btn-blue
+      width: 160px
+
+  .prod-slider
+    .owl-nav
+      button.owl-prev
+        left: 25px
+      button.owl-next
+        right: 25px
+
+  .tizer
+    font-size: 24px
+    line-height: 1.3
 
   .main-head
     padding-bottom: 60px
