section partners complete

--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -70,6 +70,12 @@
 // ≥768px
 +media-breakpoint-down(sm)
 
+  .s-partners
+    padding-bottom: 0
+
+  .partner-item
+    margin-bottom: 45px
+
   .adv-wrap
     margin-top: 50px
 
