section news complete

--- a/app/sass/base/_general.sass
+++ b/app/sass/base/_general.sass
@@ -56,10 +56,10 @@ ul
   margin-bottom: 0
 
 //pixel-glass custom
-html
-  background-repeat: no-repeat
-  background-position: 50% 0
-  background-image: url('../img/templates/index.jpg')
+//html
+//  background-repeat: no-repeat
+//  background-position: 50% 0
+//  background-image: url('../img/templates/index.jpg')
 
 // ======= END TEMPLATE STYLES =======
 
@@ -202,7 +202,6 @@ section
   &-title
     display: inline-block
 
-
 form
   label
     display: block
@@ -220,3 +219,9 @@ form
     color: #fff
   .help-block
     display: none
+
+.bg-darkblue
+  background-color: $accent-blue
+  color: #fff
+  .section-head
+    color: #fff
