--- a/app/sass/base/_libs.sass
+++ b/app/sass/base/_libs.sass
@@ -1,6 +1,6 @@
 @import "../libs/bootstrap/scss/bootstrap-reboot"
 @import "../libs/bootstrap/scss/bootstrap-grid"
 @import "../libs/bootstrap/scss/utilities/sizing"
-@import "../libs/pixel-glass/pixel-glass.css"
+//@import "../libs/pixel-glass/pixel-glass.css"
 @import "../libs/mmenu/jquery.mmenu.all.css"
 @import "../libs/owl-carousel/owl.carousel.min.css"
