--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -41,6 +41,12 @@
 // ≥992px
 +media-breakpoint-down(md)
 
+  .news-item-title
+    font-size: 18px
+
+  .news-item-desc
+    height: 98px
+
   .adv-wrap .owl-thumb-item:nth-child(2) .adv-item-title
     padding-right: 0
 
@@ -69,6 +75,14 @@
 
 // ≥768px
 +media-breakpoint-down(sm)
+
+  .s-news
+    padding-bottom: 0
+
+  .news-item
+    margin-bottom: 40px
+    &-img
+      height: 200px
 
   .s-partners
     padding-bottom: 0
