--- a/app/sass/layout/_s-partners.sass
+++ b/app/sass/layout/_s-partners.sass
@@ -2,9 +2,8 @@
   padding-top: 45px
   padding-bottom: 70px
 
-.partners-wrap
-  .col-lg-6
-    display: flex
-    align-items: center
-    justify-content: center
+.partner-item-wrap
+  display: flex
+  align-items: center
+  justify-content: center
 
