--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -6,6 +6,9 @@
 // ≥1200px
 +media-breakpoint-down(lg)
 
+  .main-foot
+    text-align: center
+
   .s-about
     .section-head
       font-size: 36px
@@ -76,6 +79,12 @@
 // ≥768px
 +media-breakpoint-down(sm)
 
+  .foot-text
+    display: block
+    top: 0
+    margin-bottom: 20px
+    margin-right: 0
+
   .s-news
     padding-bottom: 0
 
@@ -145,6 +154,16 @@
 
 // ≥480px
 +media-breakpoint-down(xs)
+  .fix-div
+    right: 0
+    bottom: 0
+
+  .main-foot
+    font-size: 14px
+  .foot-soc
+    .svg
+      width: 50px
+      height: 50px
 
   #map
     height: 400px
