index.html ready

--- a/app/sass/base/_libs.sass
+++ b/app/sass/base/_libs.sass
@@ -4,3 +4,4 @@
 //@import "../libs/pixel-glass/pixel-glass.css"
 @import "../libs/mmenu/jquery.mmenu.all.css"
 @import "../libs/owl-carousel/owl.carousel.min.css"
+@import "../libs/magnificPopup/magnific-popup.css"
