--- a/app/sass/base/_general.sass
+++ b/app/sass/base/_general.sass
@@ -94,6 +94,12 @@ ul
     color: #fff
     background-color: rgba(#011536, .7)
     border-color: rgba(#011536, .7)
+  &.disabled
+    background-color: darken(grey, 20%)
+    border-color: darken(grey, 20%)
+    &:hover
+      background-color: darken(grey, 20%)
+      border-color: darken(grey, 20%)
 section
   padding: 35px 0
 
@@ -146,7 +152,7 @@ section
   display: inline-block
   position: fixed
   top: 300px
-  right: 100px
+  right: 40px
   z-index: 100
 .fix-item
   position: relative
@@ -220,8 +226,137 @@ form
   .help-block
     display: none
 
+.popup-form
+  max-width: 600px
+  display: block
+  margin-left: auto
+  margin-right: auto
+  padding: 30px 40px 40px
+  background: $accent-blue
+  border: 4px solid darken($accent-blue, 10%)
+  border-radius: 10px
+  color: #fff
+  font-family: "PTSans", sans-serif
+  text-align: center
+  font-size: 16px
+  h3
+    font-size: 22px
+    text-transform: uppercase
+    margin-bottom: 10px
+  label
+    margin-bottom: 20px
+  .btn
+    margin-top: 15px
+    width: 100%
+    padding: 15px
+
+
 .bg-darkblue
   background-color: $accent-blue
   color: #fff
   .section-head
     color: #fff
+
+.hidden
+  display: none!important
+
+//MY_MFP_ZOOM_IN
+.my-mfp-zoom-in
+  .zoom-anim-dialog, .popup-form
+    opacity: 0
+    transition: all 0.5s ease-in-out
+    transform: scale(0.7)
+  &.mfp-ready .zoom-anim-dialog, &.mfp-ready .popup-form
+    opacity: 1
+    transform: scale(1)
+  &.mfp-removing .zoom-anim-dialog, &.mfp-removing .popup-form
+    transform: scale(0.7)
+    opacity: 0
+  &.mfp-bg
+    opacity: 0
+    transition: opacity 0.5s ease-out
+  &.mfp-ready.mfp-bg
+    opacity: .7
+  &.mfp-removing.mfp-bg
+    opacity: 0
+
+.mfp-close
+  width: 50px
+  height: 50px
+  line-height: 50px
+.mfp-close-btn-in .mfp-close
+  color: #fff
+//end MY-MFP-ZOOM-IN
+
+
+//preloader
+.preloader
+  position: fixed
+  top: 0
+  right: 0
+  bottom: 0
+  left: 0
+  width: 100%
+  height: 100%
+  z-index: 10000
+  display: flex
+  justify-content: center
+  align-items: center
+  background-color: #f6f6f6
+
+.sk-cube-grid
+  width: 7em
+  height: 7em
+  margin: auto
+
+.sk-cube-grid .sk-cube
+  width: 33%
+  height: 33%
+  background-color: $accent-blue
+  float: left
+  animation: sk-cube-grid-scale-delay 1.3s infinite ease-in-out
+
+.sk-cube-grid .sk-cube-1
+  animation-delay: 0.2s
+
+.sk-cube-grid .sk-cube-2
+  animation-delay: 0.3s
+
+.sk-cube-grid .sk-cube-3
+  animation-delay: 0.4s
+
+.sk-cube-grid .sk-cube-4
+  animation-delay: 0.1s
+
+.sk-cube-grid .sk-cube-5
+  animation-delay: 0.2s
+
+.sk-cube-grid .sk-cube-6
+  animation-delay: 0.3s
+
+.sk-cube-grid .sk-cube-7
+  animation-delay: 0s
+
+.sk-cube-grid .sk-cube-8
+  animation-delay: 0.1s
+
+.sk-cube-grid .sk-cube-9
+  animation-delay: 0.2s
+
+
+@-webkit-keyframes sk-cube-grid-scale-delay
+  0%, 70%, 100%
+    transform: scale3D(1, 1, 1)
+
+  35%
+    transform: scale3D(0, 0, 1)
+
+
+
+@keyframes sk-cube-grid-scale-delay
+  0%, 70%, 100%
+    transform: scale3D(1, 1, 1)
+
+  35%
+    transform: scale3D(0, 0, 1)
+//end preloader
