page-documents.html complete

--- a/app/sass/base/_libs.sass
+++ b/app/sass/base/_libs.sass
@@ -5,3 +5,5 @@
 @import "../libs/mmenu/jquery.mmenu.all.css"
 @import "../libs/owl-carousel/owl.carousel.min.css"
 @import "../libs/magnificPopup/magnific-popup.css"
+@import "../libs/photoswipe/photoswipe.css"
+@import "../libs/photoswipe/default-skin/default-skin.css"
