--- a/app/sass/layout/_header.sass
+++ b/app/sass/layout/_header.sass
@@ -93,8 +93,6 @@ header
   height: auto
   position: absolute
 
-
-
 .intro
   margin-top: 350px
   text-align: right
@@ -119,12 +117,12 @@ header
 .mm-listitem
   font-size: 16px
   text-transform: uppercase
-  //text-align: center
   a
     padding-top: 12px
     padding-bottom: 12px
-  &:after
-    //border: none
 
-.mm-listview
-  //padding-top: 25px
+.isnohome
+  .main-head
+    height: inherit
+    background-color: $accent-blue
+    padding-bottom: 0
