--- a/app/sass/base/_general.sass
+++ b/app/sass/base/_general.sass
@@ -110,6 +110,10 @@ section
   text-align: center
   margin-bottom: 25px
   color: #092045
+  h2
+    font-size: 36px
+    font-weight: normal
+    font-family: "Roboto", sans-serif
 
 
 //toggle-mnu
