--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -44,6 +44,13 @@
 // ≥992px
 +media-breakpoint-down(md)
 
+  .head-s-phone
+    margin-bottom: 20px
+
+  .section-head
+    h2
+      font-size: 32px
+
   .news-item-title
     font-size: 18px
 
@@ -78,6 +85,10 @@
 
 // ≥768px
 +media-breakpoint-down(sm)
+
+  .section-head
+    h2
+      font-size: 28px
 
   .foot-text
     display: block
@@ -154,6 +165,23 @@
 
 // ≥480px
 +media-breakpoint-down(xs)
+
+  .s-map
+    padding-top: 0
+
+  .s-documents
+    padding-bottom: 0
+
+  .section-head
+    h2
+      font-size: 22px
+
+  .s-map
+    .container
+      padding-left: 0
+      padding-right: 0
+
+
   .fix-div
     right: 0
     bottom: 0
