section catalog complete

--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -44,6 +44,9 @@
 // ≥992px
 +media-breakpoint-down(md)
 
+  .catalog-item
+    width: 50%
+
   .head-s-phone
     margin-bottom: 20px
 
@@ -85,6 +88,9 @@
 
 // ≥768px
 +media-breakpoint-down(sm)
+
+  .catalog-wrap
+    height: 355px
 
   .section-head
     h2
@@ -165,6 +171,13 @@
 
 // ≥480px
 +media-breakpoint-down(xs)
+
+  .catalog-wrap
+    height: auto
+
+  .catalog-item
+    width: 100%
+    padding-right: 0
 
   .s-map
     padding-top: 0
