--- a/app/sass/base/_general.sass
+++ b/app/sass/base/_general.sass
@@ -114,6 +114,7 @@ section
     font-size: 36px
     font-weight: normal
     font-family: "Roboto", sans-serif
+    text-align: left
 
 
 //toggle-mnu
