page-card.html complete

--- a/app/sass/base/_libs.sass
+++ b/app/sass/base/_libs.sass
@@ -7,3 +7,4 @@
 @import "../libs/magnificPopup/magnific-popup.css"
 @import "../libs/photoswipe/photoswipe.css"
 @import "../libs/photoswipe/default-skin/default-skin.css"
+@import "../libs/tablesaw/tablesaw.css"
