--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -44,6 +44,12 @@
 // ≥992px
 +media-breakpoint-down(md)
 
+  .prod-title
+    font-size: 26px
+
+  .tablesaw-advance
+    display: block
+
   .catalog-item
     width: 50%
 
@@ -88,6 +94,13 @@
 
 // ≥768px
 +media-breakpoint-down(sm)
+
+  .prod-img
+    width: 220px
+    height: 140px
+
+  .prod-title
+    font-size: 22px
 
   .catalog-wrap
     height: 355px
@@ -171,6 +184,18 @@
 
 // ≥480px
 +media-breakpoint-down(xs)
+
+  .s-interest
+    .section-head
+      font-size: 20px
+      text-align: center
+
+  .prod-img
+    width: 120px
+
+  .prod-title
+    font-size: 18px
+    padding-left: 15px
 
   .catalog-wrap
     height: auto
