--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -13,6 +13,8 @@
 @import layout/s-map
 @import layout/s-documents
 @import layout/s-catalog
+@import layout/s-product-card
+@import layout/s-interest
 @import layout/footer
 
 
