--- a/app/sass/base/_general.sass
+++ b/app/sass/base/_general.sass
@@ -201,7 +201,12 @@ section
   color: #092045
   +bg-cover()
   background-image: url('../img/bg-prod-item.jpg')
+  background-size: 100% 100%
   border-radius: 10px
+  border: 1px solid #fff
+  +mt(.5s)
+  &:hover
+    border-color: #d0d0d0
   &-img
     margin-bottom: 35px
     display: flex
