1) insert valid video to index.html 2) add video functionality 3) add marquee to tizer

--- a/app/sass/base/_libs.sass
+++ b/app/sass/base/_libs.sass
@@ -8,3 +8,4 @@
 @import "../libs/photoswipe/photoswipe.css"
 @import "../libs/photoswipe/default-skin/default-skin.css"
 @import "../libs/tablesaw/tablesaw.css"
+@import "../libs/video-js/video-js.min.css"
