--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -3,6 +3,24 @@
 
 /*==========  Desktop First  ==========*/
 
+@media screen and (max-width: 1750px)
+  .main-head
+    height: 900px
+
+@media screen and (max-width: 1650px)
+  .main-head
+    height: 780px
+
+@media screen and (max-width: 1400px)
+  .main-head
+    height: 720px
+
+@media screen and (max-width: 1300px)
+  .main-head
+    height: 710px
+
+
+
 // ≥1200px
 +media-breakpoint-down(lg)
 
@@ -33,7 +51,7 @@
     span
       font-size: 65px
   .main-head
-    height: 515px
+    height: 550px
 
   .top-line
     padding-bottom: 18px
@@ -89,7 +107,7 @@
     text-align: left
     margin-top: 115px
   .main-head
-    height: 400px
+    height: 429px
 
 
 // ≥768px
