--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -62,6 +62,15 @@
 // ≥992px
 +media-breakpoint-down(md)
 
+  .article-item
+    &-img
+      float: none
+      width: 100%
+      margin-bottom: 20px
+      height: 340px
+    &-title
+      margin-bottom: 15px
+
   .prod-title
     font-size: 26px
 
@@ -112,6 +121,9 @@
 
 // ≥768px
 +media-breakpoint-down(sm)
+
+  .article-item-title
+    font-size: 20px
 
   .prod-img
     width: 220px
@@ -202,6 +214,17 @@
 
 // ≥480px
 +media-breakpoint-down(xs)
+
+  .article-item
+    font-size: 14px
+    &-title
+      font-size: 18px
+    &-img
+      height: 200px
+    .btn
+      width: 150px
+      position: relative
+      top: -30px
 
   .s-interest
     .section-head
