--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -15,6 +15,7 @@
 @import layout/s-catalog
 @import layout/s-product-card
 @import layout/s-interest
+@import layout/s-articles
 @import layout/footer
 
 
