page-catalog.html complete

--- a/app/sass/layout/_s-catalog.sass
+++ b/app/sass/layout/_s-catalog.sass
@@ -20,3 +20,8 @@
       text-decoration: underline
   &.active
     font-weight: bold
+
+.p-catalog
+  padding-bottom: 0
+  .catalog-wrap
+    border-bottom: none
