page-contacts.html complete

--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -122,6 +122,14 @@
 // ≥768px
 +media-breakpoint-down(sm)
 
+  h3
+    font-size: 20px
+    font-weight: 700
+    text-transform: uppercase
+
+  .s-page
+    font-size: 16px
+
   .article-item-title
     font-size: 20px
 
