--- a/app/sass/base/_general.sass
+++ b/app/sass/base/_general.sass
@@ -63,6 +63,13 @@ ul
 
 // ======= END TEMPLATE STYLES =======
 
+h3
+  font-size: 24px
+  font-weight: 700
+  text-transform: uppercase
+
+.s-page
+  font-size: 18px
 
 .btn
   display: inline-block
