page-about.html complete

--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -122,6 +122,11 @@
 // ≥768px
 +media-breakpoint-down(sm)
 
+  .s-single
+    p
+      text-indent: 0
+      text-align: justify
+
   h3
     font-size: 20px
     font-weight: 700
