ready for landing on WP

--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -228,6 +228,14 @@
 // ≥480px
 +media-breakpoint-down(xs)
 
+  .searchform
+    .btn-search
+      width: 60px
+    input
+      width: calc(100% - 60px)
+    &-wrap
+      padding-bottom: 50px
+
   .article-item
     font-size: 14px
     &-title
