--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -16,6 +16,7 @@
 @import layout/s-product-card
 @import layout/s-interest
 @import layout/s-articles
+@import layout/s-searchform
 @import layout/footer
 
 
