--- a/app/sass/base/_media.sass
+++ b/app/sass/base/_media.sass
@@ -24,8 +24,15 @@
 // ≥1200px
 +media-breakpoint-down(lg)
 
+  .developer-block
+    top: auto
+    bottom: -50px
+    width: 100%
+    text-align: center
+
   .main-foot
     text-align: center
+    padding-bottom: 60px
 
   .s-about
     .section-head
@@ -121,6 +128,9 @@
 
 // ≥768px
 +media-breakpoint-down(sm)
+
+  .developer-block
+    font-size: 12px
 
   .s-single
     p
