--- a/app/sass/layout/_footer.sass
+++ b/app/sass/layout/_footer.sass
@@ -41,3 +41,10 @@
     background-color: #325da0
     left: 0
     top: 0
+
+
+.developer-block
+  position: absolute
+  left: 0
+  top: 15px
+  font-size: 12px
