--- a/app/sass/base/_vars.sass
+++ b/app/sass/base/_vars.sass
@@ -1,6 +1,7 @@
 $default-font: "roboto", sans-serif
 $accent-blue: #152c4f
 $text: #070f1c
+$creamy: #eee
 
 // Customization Bootstrap vars from "app/libs/bootstrap/scss/_variables.scss"
 $grid-gutter-width: 30px
