--- a/app/sass/layout/_footer.sass
+++ b/app/sass/layout/_footer.sass
@@ -14,10 +14,11 @@
   position: relative
   top: 10px
   vertical-align: top
-  margin-right: 20px
+  margin-right: 0
 
 .foot-soc
   display: inline-block
+  margin-left: 20px
   a
     display: inline-block
     margin-right: 18px
