--- a/app/sass/layout/_header.sass
+++ b/app/sass/layout/_header.sass
@@ -87,7 +87,7 @@ header
     top: 0
     right: 0
     bottom: 0
-    background-color: rgba(#000, .4)
+    background-color: rgba(#000, .6)
 .video
   width: 100%
   height: auto
@@ -126,3 +126,24 @@ header
     height: inherit
     background-color: $accent-blue
     padding-bottom: 0
+
+.scroll
+  position: absolute
+  z-index: 120
+  width: 100%
+  text-align: center
+  bottom: 60px
+  left: 0
+  a
+    position: relative
+    animation: scroll-ani ease-in-out 2s infinite
+
+@keyframes scroll-ani
+  0%
+    top: 0
+  50%
+    top: 7px
+  100%
+    top: 0
+
+
