--- a/app/sass/layout/_s-product-card.sass
+++ b/app/sass/layout/_s-product-card.sass
@@ -21,7 +21,7 @@
 
 table.prod-table
   thead
-    background-color: #ebebeb
+    background-color: darken(#ebebeb, 10%)
     text-align: center
     vertical-align: top
     font-weight: normal
@@ -43,10 +43,10 @@ table.prod-table
     border-bottom: 1px solid #d0d0d0
     text-align: left
     padding-left: 0
-    background-color: #fff
+    background-color: $creamy
   tbody
     tr
-      background-color: #fff
+      background-color: $creamy
       &:nth-child(even)
         background-color: #f9f8f8
 
